recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: type mismatch;
 found   : Int(0)
 required: List[Int]
		return 0;
                       ^butLast:5: error: value ++ is not a member of Int
		return l.head++butLast(l.tail);
                             ^